// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List Converter oboToSlate converts an OboNode to a Slate node 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "text": "mockLine1",
            },
          ],
          "content": Object {},
          "subtype": "ObojoboDraft.Chunks.List.Line",
          "type": "ObojoboDraft.Chunks.List",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            Object {
                              "children": Array [
                                Object {
                                  "text": "mockLine1",
                                },
                              ],
                              "content": Object {},
                              "subtype": "ObojoboDraft.Chunks.List.Line",
                              "type": "ObojoboDraft.Chunks.List",
                            },
                          ],
                          "content": Object {
                            "bulletStyle": undefined,
                            "type": undefined,
                          },
                          "subtype": "ObojoboDraft.Chunks.List.Level",
                          "type": "ObojoboDraft.Chunks.List",
                        },
                      ],
                      "content": Object {
                        "bulletStyle": "upper-roman",
                        "type": undefined,
                      },
                      "subtype": "ObojoboDraft.Chunks.List.Level",
                      "type": "ObojoboDraft.Chunks.List",
                    },
                  ],
                  "content": Object {
                    "bulletStyle": "upper-alpha",
                    "type": undefined,
                  },
                  "subtype": "ObojoboDraft.Chunks.List.Level",
                  "type": "ObojoboDraft.Chunks.List",
                },
              ],
              "content": Object {
                "bulletStyle": "lower-roman",
                "type": undefined,
              },
              "subtype": "ObojoboDraft.Chunks.List.Level",
              "type": "ObojoboDraft.Chunks.List",
            },
          ],
          "content": Object {
            "bulletStyle": "lower-alpha",
            "type": undefined,
          },
          "subtype": "ObojoboDraft.Chunks.List.Level",
          "type": "ObojoboDraft.Chunks.List",
        },
        Object {
          "children": Array [
            Object {
              "text": "mockLine2",
            },
          ],
          "content": Object {},
          "subtype": "ObojoboDraft.Chunks.List.Line",
          "type": "ObojoboDraft.Chunks.List",
        },
      ],
      "content": Object {
        "bulletStyle": "decimal",
        "type": undefined,
      },
      "subtype": "ObojoboDraft.Chunks.List.Level",
      "type": "ObojoboDraft.Chunks.List",
    },
  ],
  "content": Object {
    "listStyles": Object {
      "indents": Object {},
    },
    "spacing": "compact",
    "textGroup": Array [
      Object {
        "text": Object {
          "value": "mockLine1",
        },
      },
      Object {
        "data": Object {
          "indent": 5,
        },
        "text": Object {
          "value": "mockLine1",
        },
      },
      Object {
        "text": Object {
          "value": "mockLine2",
        },
      },
    ],
  },
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`List Converter oboToSlate converts an OboNode to a Slate node with a list style and triggers 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "text": "mockLine1",
            },
          ],
          "content": Object {},
          "subtype": "ObojoboDraft.Chunks.List.Line",
          "type": "ObojoboDraft.Chunks.List",
        },
        Object {
          "children": Array [
            Object {
              "text": "mockLine2",
            },
          ],
          "content": Object {},
          "subtype": "ObojoboDraft.Chunks.List.Line",
          "type": "ObojoboDraft.Chunks.List",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            Object {
                              "children": Array [
                                Object {
                                  "text": "mockLine3",
                                },
                              ],
                              "content": Object {
                                "hangingIndent": false,
                              },
                              "subtype": "ObojoboDraft.Chunks.List.Line",
                              "type": "ObojoboDraft.Chunks.List",
                            },
                          ],
                          "content": Object {
                            "bulletStyle": undefined,
                            "type": "unordered",
                          },
                          "subtype": "ObojoboDraft.Chunks.List.Level",
                          "type": "ObojoboDraft.Chunks.List",
                        },
                      ],
                      "content": Object {
                        "bulletStyle": undefined,
                        "type": "unordered",
                      },
                      "subtype": "ObojoboDraft.Chunks.List.Level",
                      "type": "ObojoboDraft.Chunks.List",
                    },
                  ],
                  "content": Object {
                    "bulletStyle": undefined,
                    "type": "unordered",
                  },
                  "subtype": "ObojoboDraft.Chunks.List.Level",
                  "type": "ObojoboDraft.Chunks.List",
                },
              ],
              "content": Object {
                "bulletStyle": "square",
                "type": "unordered",
              },
              "subtype": "ObojoboDraft.Chunks.List.Level",
              "type": "ObojoboDraft.Chunks.List",
            },
          ],
          "content": Object {
            "bulletStyle": "circle",
            "type": "unordered",
          },
          "subtype": "ObojoboDraft.Chunks.List.Level",
          "type": "ObojoboDraft.Chunks.List",
        },
      ],
      "content": Object {
        "bulletStyle": "disc",
        "type": "unordered",
      },
      "subtype": "ObojoboDraft.Chunks.List.Level",
      "type": "ObojoboDraft.Chunks.List",
    },
  ],
  "content": Object {
    "listStyles": Object {
      "indents": Object {},
      "type": "unordered",
    },
    "spacing": "moderate",
    "textGroup": Array [
      Object {
        "text": Object {
          "value": "mockLine1",
        },
      },
      Object {
        "text": Object {
          "value": "mockLine2",
        },
      },
      Object {
        "data": Object {
          "hangingIndent": false,
          "indent": 5,
        },
        "text": Object {
          "value": "mockLine3",
        },
      },
    ],
    "triggers": "mock-triggers",
  },
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`List Converter slateToObo converts a Slate node to an OboNode with content 1`] = `
Object {
  "children": Array [],
  "content": Object {
    "listStyles": Object {
      "indents": Object {
        "0": Object {},
        "1": Object {},
      },
      "type": undefined,
    },
    "textGroup": Array [
      Object {
        "data": Object {
          "hangingIndent": false,
          "indent": 0,
        },
        "text": Object {
          "styleList": Array [
            Object {
              "data": Object {},
              "end": 8,
              "start": 0,
              "type": "b",
            },
          ],
          "value": "mockText",
        },
      },
      Object {
        "data": Object {
          "indent": 1,
        },
        "text": Object {
          "styleList": Array [
            Object {
              "data": Object {},
              "end": 8,
              "start": 0,
              "type": "b",
            },
          ],
          "value": "mockText",
        },
      },
    ],
  },
  "id": "mockKey",
  "type": "ObojoboDraft.Chunks.List",
}
`;
